# giza

./: .gitignore  Cargo.toml  README.md
air/: Cargo.toml
air/src/: constraints.rs  frame.rs  lib.rs  options.rs
cli/: Cargo.toml  README.md
cli/src/: giza.rs  utils.rs
cli/src/cmd/: mod.rs  prove.rs  verify.rs
cli/src/cmd/prove/: args.rs  mod.rs  prove.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/field/: mod.rs
core/src/field/f252/: mod.rs
core/src/flags/: mod.rs
core/src/inputs/: mod.rs
core/src/word/: helpers.rs  mod.rs
examples/: Cargo.toml
examples/src/: lib.rs  main.rs
examples/src/factorial/: factorial.json  mod.rs
examples/src/fibonacci/: fibonacci.json  mod.rs
examples/src/output/: mod.rs
prover/: Cargo.toml
prover/src/: lib.rs
runner/: Cargo.toml
runner/src/: cairo_interop.rs  errors.rs  hints.rs  lib.rs  memory.rs  runner.rs  trace.rs
wasm/: .gitignore  Cargo.toml  index.js  package-lock.json  package.json  webpack.config.js
wasm/src/: lib.rs
