[package]
name = "giza-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
air = { package = "giza-air", path = "../air", version = "0.1", default-features = false }
prover = { package = "giza-prover", path = "../prover", version = "0.1", default-features = false }
runner = { package = "giza-runner", path = "../runner", version = "0.1", default-features = false }
winterfell = { package = "winter-verifier", git = "https://github.com/maxgillett/winterfell", rev = "0aad6a5", features = ["std"], default-features = false }
winter-utils = { package = "winter-utils", git = "https://github.com/maxgillett/winterfell", rev = "0aad6a5", default-features = false }
serde = "1.0.137"
bincode = "1.3.3"

[[bin]]
name = "giza"
path = "src/giza.rs"
doc = false
