[package]
name = "giza-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[dependencies]
math = { package = "winter-math", path = "../../winterfell/math", version = "0.4", default-features = false }
hex = "0.4"
winter-utils = { package = "winter-utils", path = "../../winterfell/utils/core", version = "0.4", default-features = false }
