[package]
name = "examples"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[[bin]]
name = "giza"
path = "src/main.rs"
bench = false
doctest = false

[dependencies]
air = { package = "giza-air", path = "../air", version = "0.1", default-features = false }
prover = { package = "giza-prover", path = "../prover", version = "0.1", default-features = false }
runner = { package = "giza-runner", path = "../runner", version = "0.1", default-features = false }
giza_core = { package = "giza-core", path = "../core", version = "0.1", default-features = false }
winterfell = { package = "winter-verifier", version = "0.3", default-features = false }
