[package]
name = "examples"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[[bin]]
name = "giza-examples"
path = "src/main.rs"
bench = false
doctest = false

[dependencies]
air = { package = "giza-air", path = "../air", version = "0.1", default-features = false }
prover = { package = "giza-prover", path = "../prover", version = "0.1", default-features = false }
runner = { package = "giza-runner", path = "../runner", version = "0.1", default-features = false }
giza_core = { package = "giza-core", path = "../core", version = "0.1", default-features = false }
winterfell = { package = "winter-verifier", git = "https://github.com/maxgillett/winterfell", rev = "0aad6a5", features = ["std"], version = "0.4", default-features = false }
clap = { version = "3.2.6", features = ["derive"] }
