[package]
name = "giza-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
js-sys = "0.3.57"
air = { package = "giza-air", path = "../air", version = "0.1", default-features = false }
giza_core = { package = "giza-core", path = "../core", version = "0.1", default-features = false }
winterfell = { package = "winter-verifier", path = "../../winterfell/verifier", version = "0.4", default-features = false }
winter-utils = { package = "winter-utils", path = "../../winterfell/utils/core", version = "0.4", default-features = false }
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }

[profile.release]
lto = true
opt-level = 's'

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
